--- a/index.html
+++ b/index.html
@@ -5,11 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css" />
     <!--<script type="text/javascript" src="themes/jquery.mobile-1.4.5.min.js"></script>-->
-    <script type="text/javascript" src="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
-    <script type="text/javascript" src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
+
     <link rel="stylesheet" href="themes/myTheme.css" />
     <link href='https://fonts.googleapis.com/css?family=Francois+One' rel='stylesheet' type='text/css'>
-    <script type="text/javascript"  src='http://cdn.renderedfont.com/js/renderedfont-0.8.min.js#free'></script>
+
 </head>
 <body>
 <!--PAGE ONE-->
@@ -43,7 +42,7 @@
     </div>
     <div  data-role="main" class="ui-content">
         <div class="ui-grid-solo top-paragraph">
-            <div class="heyDiv"><h1 class="heyThere">Hey There!</h1></div>
+            <div class="heyDiv"><h1 class="heyThere">Hi There!</h1></div>
             <div class="ui-block-a">
             <div class="ui-bar ui-bar-a" style="background-color: transparent; border:none; ">
                 <p>Welcome to the ultimate hiking guide. Begin by choosing the state you wish to get lost in.</p>
@@ -74,7 +73,7 @@
             <div class="mobileNav">
                 <a href="#popupMenu2" data-rel="popup" data-transition="slide" class="ui-btn ui-corner-all ui-shadow ui-btn-inline ui-icon-bars ui-btn-icon-right ui-btn-a a-popupMenu">Menu</a>
                 <div data-role="popup" id="popupMenu2"  data-theme="a" style="top: 3em; list-style: none;>
-                    <ul data-role="listview data-inset="true" style="min-width:250px;">
+                    <ul data-role="listview data-inset="true">
                     <li><a href="#page1">Home</a></li>
                     <li><a href="#page2">Hiking in Washington</a></li>
                     <li><a href="#page3">Hiking in Idaho</a></li>
@@ -236,7 +235,6 @@
                     <li><a href="#page3">Hiking in Idaho</a></li>
                     <li><a href="#page4">Hiking Tips</a></li>
                     <li><a href="#page5">Contacts</a></li>
-                    </ul>
                 </div>
             </div>
         </div>
@@ -256,5 +254,9 @@
     </div>
 </div>
 </body>
+<script type="text/javascript" src="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
+<script type="text/javascript" src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
+<script type="text/javascript"  src='http://cdn.renderedfont.com/js/renderedfont-0.8.min.js#free'></script>
+
 </html>
 
